Alignement de l'image pour la liste des souhaits, je dois encore regarder pour ajuster le prix car il bug un petit peu.

--- a/css/style_compte.css
+++ b/css/style_compte.css
@@ -7,19 +7,21 @@
     text-decoration: dotted underline;
 }
 #article_1{
+    display: flex;
+    justify-content: center;
     background-color: white;
     margin-top: 150px;
     padding: 150px;
     width: 120px;
     margin-left: 65px;
     margin-bottom: 100px;
-}
-#img_1{
-    object-position: center;
-    border: 2px solid red;
+    text-align: center;
 }
 /* #prix{
-    text-align: center;
-    font-size: 50px;
-    padding-bottom: 10px;
+    display: flex;
+    align-items: center;
+    height: 105px;
+    font-size: xx-large;
+    text-decoration: solid underline;
+    border: 2px dotted red;
 } */
